# old-University-projects

./: README.md
old/STL_C++17/: CMakeLists.txt  main.cpp
old/TechProgKursach/: Aircraft.cpp  Aircraft.h  AircraftBuilder.cpp  AircraftBuilder.h  CMakeLists.txt  CombatAircraftBuilder.cpp  CombatAircraftBuilder.h  Director.cpp  Director.h  HelicopterBuilder.cpp  HelicopterBuilder.h  Interface.cpp  Interface.h  LoadSave.cpp  LoadSave.h  PassengerAircraftBuilder.cpp  PassengerAircraftBuilder.h  QuadcopterBuilder.cpp  QuadcopterBuilder.h  Validator.cpp  Validator.h  main.cpp
old/ipc/Client/: CMakeLists.txt  a.out  main.c
old/ipc/Clients/: CMakeLists.txt  main.c
old/ipc/Server/: CMakeLists.txt  main.c
old/ipc/operating_systems/: CMakeLists.txt  a.out  main.c
old/mpi/: CMakeLists.txt  a.out  ex  example.cpp  main  main.cpp
old/omp/: CMakeLists.txt  a.out  main  main.cpp
old/other/boostlib/: CMakeLists.txt  a.out  hana.cpp  main.cpp  xmlparser.cpp
old/other/cpuid/: CMakeLists.txt  main.c
old/other/gorbach/: CMakeLists.txt  main.cpp
old/other/protection3/: CMakeLists.txt  main.cpp  old
old/other/temp/: CMakeLists.txt  main  main.cpp
old/porkof_mpi/: CMakeLists.txt  a.out  main.c
old/rts/nastya_rts/: CMakeLists.txt  a.out  main.c  task
old/rts/rts2/: CMakeLists.txt  a.out  main.c  task
old/rts/rts3/: CMakeLists.txt  a.out  main.c  task
old/rts/rts3_client/: CMakeLists.txt  main.c
old/rts/rts4/: CMakeLists.txt  a.out  main.c  out.txt  task
old/shared_c/: CMakeLists.txt  a.out  main.c  shared
old/stepik/: CMakeLists.txt  main.cpp
(+66 files in other folders)
